gcc/testsuite/rust/rustc/ui/error-codes/E0767.rs
fn main () {
    'a: loop {
        || {
            loop { break 'a; } // { dg-error ".E0767." "" { target *-*-* } }
        }
    }
}

